--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <div>
                     <span class="koumoku"><label for="tel">*電話番号</label></span><input id="tel" type="tel" name="tel">
                 </div>
-                <div>
+                <div class="select">
                     <span class="koumoku"><label for="todouhuken">*お住いの都道府県</label></span><select name="todouhuken" id="todouhuken">
                         <option value=""hidden>選択してください</option>
                         <option value="1">北海道</option>
@@ -471,7 +471,7 @@
                         <option value="47">沖縄県</option>
                     </select>
                 </div>
-                <div>
+                <div class="select">
                     <span class="koumoku"><label for="kinmuti">*希望勤務地</label></span><select name="kinmuti" id="kinmuti">
                         <option value=""hidden>選択してください</option>
                         <option value="1">北海道</option>
@@ -541,7 +541,7 @@
                         予約枠により、当日予約が可能な場合があります。<br>
                     </div>
                 </div>
-                <div>
+                <div class="select">
                     <span class="koumoku">*連絡可能時間帯</span><select name="time" id="time">
                         <option value=""hidden>選択してください</option>
                         <option value="time0">いつでも可能</option>
