--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <span class="koumoku"><label for="rendou">*氏名（ふりがな）</label></span><input id="rendou" type="text" name="firstname" required placeholder="せい">
                     <input id="rendou01" type="text" name="lastname" required placeholder="めい">
                 </div>
-                <div>
+                <div class="select">
                     <span class="koumoku">*生年月日</span><select name="birth-y" id="birth-y" required>
                         <option value=""></option>
                         <option value="1900">1900</option>
