--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="top-rayout.css">
+    <link rel="stylesheet" href="top-rayout.css"> <!--width=1024px以上-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap" rel="stylesheet">
@@ -410,7 +410,6 @@
                         <option value="29">29</option>
                         <option value="30">30</option>
                         <option value="31">31</option>
-
                     </select><label for="birth-d">日</label>
                 </div>
                 <div>
@@ -559,7 +558,9 @@
                 <div class="check-posi">
                     <input type="checkbox" id="check" name="check"><label for="check" class="p-agree">利用規約に同意する。</label>
                 </div>
-                <button type="button" id="bt"><label for="bt">利用規約に同意の上利用する<span class="agree-icon">&#9698;</span></label></button>
+                <div class="bt-posi">
+                    <button type="button" id="bt"><label for="bt">利用規約に同意の上利用する<span class="agree-icon">&#9698;</span></label></button>
+                </div>
             </div>
         </div>
         <!-- ↑fifth↑ -->
