--- a/index.html
+++ b/index.html
@@ -119,39 +119,47 @@
                 <h1 class="third-title">サービスの特徴</h1>
             </div>
             <div class="third-flex">
+                <div class="third-flexbox">
                     <p class="back-text-n">01</p>
                     <div></div>
-                <div class="service-contents">
-                    <div class="service-title">専任アドバイザーによるサービス</div>
-                    <img src="job04.png" alt="" class="service-img">
-                    <div class="service-details">当社の無料転職相談サービスは、これまでの転職相談はもちろん、『アドバイザー』のように転職活動のさまざまなご要望にお応えします。お客様一人ひとりのスキルや職務経歴、将来の展望までを考慮したOne to Oneなリコメンド、アドバイスを提供いたします。
+                    <div class="service-contents">
+                        <div class="service-title">専任アドバイザーによるサービス</div>
+                        <img src="job04.png" alt="" class="service-img">
+                        <div class="service-details">当社の無料転職相談サービスは、これまでの転職相談はもちろん、『アドバイザー』のように転職活動のさまざまなご要望にお応えします。お客様一人ひとりのスキルや職務経歴、将来の展望までを考慮したOne to Oneなリコメンド、アドバイスを提供いたします。
+                        </div>
                     </div>
                 </div>
+                <div class="third-flexbox">
                     <p class="back-text-n">02</p>
                     <div></div>
-                <div class="service-contents">
-                    <div class="service-title">業界・職種のスペシャリスト</div>
-                    <img src="job05.png" alt="" class="service-img">
-                    <div class="service-details">私たち当社の転職アドバイザーは業界の転職アドバイスのスペシャリストなだけでなく、皆さまの転職活動をより快適に気持ちよく行っていただけるように日々努力しております。是非一度このサービスクオリティを体験していただければと思います。
+                    <div class="service-contents">
+                        <div class="service-title">業界・職種のスペシャリスト</div>
+                        <img src="job05.png" alt="" class="service-img">
+                        <div class="service-details">私たち当社の転職アドバイザーは業界の転職アドバイスのスペシャリストなだけでなく、皆さまの転職活動をより快適に気持ちよく行っていただけるように日々努力しております。是非一度このサービスクオリティを体験していただければと思います。
+                        </div>
                     </div>
                 </div>
+                <div class="third-flexbox">
                     <p class="back-text-n">03</p>
                     <div></div>
-                <div class="service-contents">
-                    <div class="service-title">各業界の厳選した豊富な求人数</div>
-                    <img src="job06.png" alt="" class="service-img">
-                    <div class="service-details">業界・職種専門である私たちには、各業界から多くの求人が集まっています。既に紹介会社を通じて転職活動をしている方も是非登録してご希望の求人があるかご覧になってください。サイト内の求人検索で、希望する仕事が見つからなかったと諦めてはいけません。当社が保有する求人情報のうち、約70～95％が一般には公開していない非公開求人情報です。
+                    <div class="service-contents">
+                        <div class="service-title">各業界の厳選した豊富な求人数</div>
+                        <img src="job06.png" alt="" class="service-img">
+                        <div class="service-details">業界・職種専門である私たちには、各業界から多くの求人が集まっています。既に紹介会社を通じて転職活動をしている方も是非登録してご希望の求人があるかご覧になってください。サイト内の求人検索で、希望する仕事が見つからなかったと諦めてはいけません。当社が保有する求人情報のうち、約70～95％が一般には公開していない非公開求人情報です。
+                        </div>
                     </div>
                 </div>
+                <div class="third-flexbox">
                     <p class="back-text-n">04</p>
                     <div></div>
-                <div class="service-contents">
-                    <div class="service-title">
-                    転職支援ツール『eコンシェル』
-                    </div>
-                    <img src="job07.png" alt="" class="service-img">
-                    <div class="service-details">
-                    オリジナル転職支援ツール『eコンシェル』では、求人検索や求人への応募のほか、選考状況の一括管理、担当転職コンシェルジュとのチャット連絡、サイト非公開となっている求人情報の閲覧やご希望条件にマッチングするおすすめ求人のご提案機能などがご利用いただけます。転職活動における手間や負担を軽減させる大好評のツールです！
+                    <div class="service-contents">
+                        <div class="service-title">
+                        転職支援ツール『eコンシェル』
+                        </div>
+                        <img src="job07.png" alt="" class="service-img">
+                        <div class="service-details">
+                        オリジナル転職支援ツール『eコンシェル』では、求人検索や求人への応募のほか、選考状況の一括管理、担当転職コンシェルジュとのチャット連絡、サイト非公開となっている求人情報の閲覧やご希望条件にマッチングするおすすめ求人のご提案機能などがご利用いただけます。転職活動における手間や負担を軽減させる大好評のツールです！
+                        </div>
                     </div>
                 </div>
             </div>
@@ -189,18 +197,21 @@
             <div class="fourth-flex">
                 <div class="step-details">
                     <img src="job08.png" alt="" class="round-img">
+                    <div></div>
                     <p class="step-title">1.登録</p>
                     <div class="round-details">サポートに必要な最低限の情報のみを登録（1分）して、案内を待つだけ。
                     </div>
                 </div>
                 <div class="step-details">
                     <img src="job09.png" alt="" class="round-img">
+                    <div></div>
                     <p class="step-title">2.転職相談</p>
                     <div class="round-details">どんなキャリアを望んでいるのか、あなたの想いを聞かせてください。
                     </div>
                 </div>
                 <div class="step-details">
                     <img src="job10.png" alt="" class="round-img">
+                    <div></div>
                     <p class="step-title">3.求人紹介</p>
                     <div class="round-details">経験や希望をもとに、あなたに合う求人をご紹介いたします。
                     </div>
